--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <p class="item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid recusandae eligendi nemo distinctio iure cupiditate iste possimus. Aut, odit adipisci totam repudiandae dolores dolorem maxime fugiat eius unde saepe voluptates.</p>
     </main>
     <aside>
-            <img class = "item centerv aside material-icons" src="placeholder" alt="github" height="42" width="42">
-            <img class = "item centerv aside" src="placeholder" alt="linkedin" height="42" width="42">
-            <img class = "item centerv aside" src="placeholder" alt="gmail" height="42" width="42">
+            <button><img class = "item centerv aside material-icons" src="./assets/vectors/github.svg" alt="github" height="42" width="42"></button>
+            <button><img class = "item centerv aside" src="./assets/vectors/gmail.svg" alt="gmail" height="42" width="42"></button>
+            <button><img class = "item centerv aside" src="./assets/vectors/linkedin.svg" alt="linkedin" height="42" width="42"></button>
     </aside>
     <footer></footer>
 </body>
