--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="index.css"></link>
+    <link rel="stylesheet" type="text/css" href="index.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
     <title>Gabriel Nóbrega</title>
 </head>
 <body class ="container">
     <header>
-        <img class = "material-icons item centerv" alt="menu"></img>
-        <img class = "material-icons item centerv centerheader" alt="dashboard"></img>
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <i class = "material-icons item centerv" style="font-size:42px; color:#66fcf1">menu</i>
+        <i class = "material-icons item centerv centerheader" style="font-size:42px; color:#66fcf1" >dashboard</i>
 
     </header>
     <main>
@@ -19,9 +20,9 @@
         <p class="item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid recusandae eligendi nemo distinctio iure cupiditate iste possimus. Aut, odit adipisci totam repudiandae dolores dolorem maxime fugiat eius unde saepe voluptates.</p>
     </main>
     <aside>
-            <button><img class = "item centerv aside material-icons" src="./assets/vectors/github.svg" alt="github" height="42" width="42"></button>
-            <button><img class = "item centerv aside" src="./assets/vectors/gmail.svg" alt="gmail" height="42" width="42"></button>
-            <button><img class = "item centerv aside" src="./assets/vectors/linkedin.svg" alt="linkedin" height="42" width="42"></button>
+            <a href="#"><i class="fab fa-github aside centerv"></i></a>
+            <a href="#"><i class="fab fa-linkedin aside centerv"></i></a>
+            <a href="#"><i class="fas fa-envelope aside centerv"></i></a>
     </aside>
     <footer></footer>
 </body>
