remove unused vectors, fixing aside and header

--- a/index.html
+++ b/index.html
@@ -7,22 +7,23 @@
     <link rel="stylesheet" type="text/css" href="index.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat+Alternates&display=swap" rel="stylesheet"> 
     <title>Gabriel Nóbrega</title>
 </head>
 <body class ="container">
-    <header>
+    <header class="fixed-top">
         <i class = "material-icons item centerv" style="font-size:42px; color:#66fcf1">menu</i>
         <i class = "material-icons item centerv centerheader" style="font-size:42px; color:#66fcf1" >dashboard</i>
 
     </header>
     <main>
         <h1 class="item">About me</h1>
-        <p class="item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid recusandae eligendi nemo distinctio iure cupiditate iste possimus. Aut, odit adipisci totam repudiandae dolores dolorem maxime fugiat eius unde saepe voluptates.</p>
+        <p class="item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid recusandae eligendi nemo distinctio iure cupiditate iste possimus. Aut, odit adipisci totam repudiandae dolores dolorem maxime fugiat eius unde saepe voluptates.LoremLorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid recusandae eligendi nemo distinctio iure cupiditate iste possimus. Aut, odit adipisci totam repudiandae dolores dolorem maxime fugiat eius unde saepe voluptates.LoremLorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid recusandae eligendi nemo distinctio iure cupiditate iste possimus. Aut, odit adipisci totam repudiandae dolores dolorem maxime fugiat eius unde saepe voluptates.LoremLorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid recusandae eligendi nemo distinctio iure cupiditate iste possimus. Aut, odit adipisci totam repudiandae dolores dolorem maxime fugiat eius unde saepe voluptates.LoremLorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid recusandae eligendi nemo distinctio iure cupiditate iste possimus. Aut, odit adipisci totam repudiandae dolores dolorem maxime fugiat eius unde saepe voluptates.LoremLorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid recusandae eligendi nemo distinctio iure cupiditate iste possimus. Aut, odit adipisci totam repudiandae dolores dolorem maxime fugiat eius unde saepe voluptates.LoremLorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid recusandae eligendi nemo distinctio iure cupiditate iste possimus. Aut, odit adipisci totam repudiandae dolores dolorem maxime fugiat eius unde saepe voluptates.LoremLorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid recusandae eligendi nemo distinctio iure cupiditate iste possimus. Aut, odit adipisci totam repudiandae dolores dolorem maxime fugiat eius unde saepe voluptates.Lorem</p>
     </main>
-    <aside>
-            <a href="#"><i class="fab fa-github aside centerv"></i></a>
-            <a href="#"><i class="fab fa-linkedin aside centerv"></i></a>
-            <a href="#"><i class="fas fa-envelope aside centerv"></i></a>
+    <aside class="fixed-right">
+            <a href="https://github.com/Gabrielomn"><i class="fab fa-github aside centerv"></i></a>
+            <a href="https://www.linkedin.com/in/gabriel-nobrega-371691191/"><i class="fab fa-linkedin aside centerv"></i></a>
+            <a href="https://mail.google.com/mail/?view=cm&fs=1&to=gabriel.nobrega@ccc.ufcg.edu.br"><i class="fas fa-envelope aside centerv"></i></a>
     </aside>
     <footer></footer>
 </body>
