--- a/index.html
+++ b/index.html
@@ -12,13 +12,54 @@
 </head>
 <body class ="container">
     <header class="fixed-top">
-        <i class = "material-icons item centerv" style="font-size:42px; color:#66fcf1">menu</i>
-        <i class = "material-icons item centerv centerheader" style="font-size:42px; color:#66fcf1" >dashboard</i>
-
+        <i class = "material-icons item centerv" style="font-size:48px; color:#66fcf1; margin-right:auto">menu</i>
+        <i class = "material-icons item centerv" style="font-size:42px; color:#66fcf1" >dashboard</i>
+        <i class="item centerv" style="margin-left:auto; width:42px;"></i>
     </header>
     <main>
-        <h1 class="item">About me</h1>
-        <p class="item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid recusandae eligendi nemo distinctio iure cupiditate iste possimus. Aut, odit adipisci totam repudiandae dolores dolorem maxime fugiat eius unde saepe voluptates.LoremLorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid recusandae eligendi nemo distinctio iure cupiditate iste possimus. Aut, odit adipisci totam repudiandae dolores dolorem maxime fugiat eius unde saepe voluptates.LoremLorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid recusandae eligendi nemo distinctio iure cupiditate iste possimus. Aut, odit adipisci totam repudiandae dolores dolorem maxime fugiat eius unde saepe voluptates.LoremLorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid recusandae eligendi nemo distinctio iure cupiditate iste possimus. Aut, odit adipisci totam repudiandae dolores dolorem maxime fugiat eius unde saepe voluptates.LoremLorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid recusandae eligendi nemo distinctio iure cupiditate iste possimus. Aut, odit adipisci totam repudiandae dolores dolorem maxime fugiat eius unde saepe voluptates.LoremLorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid recusandae eligendi nemo distinctio iure cupiditate iste possimus. Aut, odit adipisci totam repudiandae dolores dolorem maxime fugiat eius unde saepe voluptates.LoremLorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid recusandae eligendi nemo distinctio iure cupiditate iste possimus. Aut, odit adipisci totam repudiandae dolores dolorem maxime fugiat eius unde saepe voluptates.LoremLorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid recusandae eligendi nemo distinctio iure cupiditate iste possimus. Aut, odit adipisci totam repudiandae dolores dolorem maxime fugiat eius unde saepe voluptates.Lorem</p>
+        <div>
+            <h2 class="item">About me</h2>
+            <p class="item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid recusandae eligendi nemo distinctio iure cupiditate iste possimus. Aut, odit adipisci totam repudiandae dolores dolorem maxime fugiat eius unde saepe voluptates.LoremLorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid recusandae eligendi nemo distinctio iure cupiditate iste possimus. Aut, odit adipisci totam repudiandae dolores dolorem maxime fugiat eius unde saepe voluptates.LoremLorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid recusandae eligendi nemo distinctio iure cupiditate iste possimus. Aut, odit adipisci totam repudiandae dolores dolorem maxime fugiat eius unde saepe voluptates.LoremLorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid recusandae eligendi nemo distinctio iure cupiditate iste possimus. Aut, odit adipisci totam repudiandae dolores dolorem maxime fugiat eius unde saepe voluptates.LoremLorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid recusandae eligendi nemo distinctio iure cupiditate iste possimus. Aut, odit adipisci totam repudiandae dolores dolorem maxime fugiat eius unde saepe voluptates.LoremLorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid recusandae eligendi nemo distinctio iure cupiditate iste possimus. Aut, odit adipisci totam repudiandae dolores dolorem maxime fugiat eius unde saepe voluptates.LoremLorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid recusandae eligendi nemo distinctio iure cupiditate iste possimus. Aut, odit adipisci totam repudiandae dolores dolorem maxime fugiat eius unde saepe voluptates.LoremLorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid recusandae eligendi nemo distinctio iure cupiditate iste possimus. Aut, odit adipisci totam repudiandae dolores dolorem maxime fugiat eius unde saepe voluptates.Lorem</p>
+        </div>
+        <div>
+                <h2 class="item">My Work</h2>
+                <section class="box">
+                    <div class="item project">
+                        <h3 class="projecttitle">lorem</h3>
+                        <p class="projectdesc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis quisquam sapiente reprehenderit aut magnam ipsam perferendis, molestiae eveniet consequatur, cupiditate esse corporis quae sed, aliquid ad? Dolorem hic error at?</p>
+                        <ul class="projecttech">
+                            <li>u1</li>
+                            <li>u2</li>
+                        </ul>
+                        <div class="projectlinks">
+
+                        </div>
+                    </div>
+                    <div class="item project">
+                        <h3 class="projecttitle">ipsum</h3>
+                        <p class="projectdesc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis quisquam sapiente reprehenderit aut magnam ipsam perferendis, molestiae eveniet consequatur, cupiditate esse corporis quae sed, aliquid ad? Dolorem hic error at?</p>
+                        <ul class="projecttech">
+                            <h4>Tech</h4>
+                            <li>nodejs</li>
+                            <li>mongodb</li>
+                        </ul>
+                        <div class="projectlinks">
+    
+                        </div>
+                    </div>
+                    <div class="item project">
+                        <h3 class="projecttitle">dolor</h3>
+                        <p class="projectdesc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis quisquam sapiente reprehenderit aut magnam ipsam perferendis, molestiae eveniet consequatur, cupiditate esse corporis quae sed, aliquid ad? Dolorem hic error at?</p>
+                        <ul class="projecttech">
+                            <li>u1</li>
+                            <li>u2</li>
+                        </ul>
+                        <div class="projectlinks">
+        
+                        </div>
+                    </div>
+                </section>
+        </div>
     </main>
     <aside class="fixed-right">
             <a href="https://github.com/Gabrielomn"><i class="fab fa-github aside centerv"></i></a>
