adding assets and cards

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
                             <li>u2</li>
                         </ul>
                         <div class="projectlinks">
-
+                            <a href="#"><img src="./assets/back.svg"></a>
+                            <a href="#"><img src="./assets/site.svg"></a>
                         </div>
                     </div>
                     <div class="item project">
@@ -44,7 +45,8 @@
                             <li>mongodb</li>
                         </ul>
                         <div class="projectlinks">
-    
+                            <a href="#"><img src="./assets/site.svg"></a>
+                            <a href="#"><img src="./assets/front.svg"></a>
                         </div>
                     </div>
                     <div class="item project">
@@ -55,16 +57,18 @@
                             <li>u2</li>
                         </ul>
                         <div class="projectlinks">
-        
+                            <a href="#"><img src="./assets/back.svg"></a>
+                            <a href="#"><img src="./assets/site.svg"></a>
+                            <a href="#"><img src="./assets/front.svg"></a>
                         </div>
                     </div>
                 </section>
         </div>
     </main>
     <aside class="fixed-right">
-            <a href="https://github.com/Gabrielomn"><i class="fab fa-github aside centerv"></i></a>
-            <a href="https://www.linkedin.com/in/gabriel-nobrega-371691191/"><i class="fab fa-linkedin aside centerv"></i></a>
-            <a href="https://mail.google.com/mail/?view=cm&fs=1&to=gabriel.nobrega@ccc.ufcg.edu.br"><i class="fas fa-envelope aside centerv"></i></a>
+            <a href="https://github.com/Gabrielomn" target="github"><i class="fab fa-github aside centerv"></i></a>
+            <a href="https://www.linkedin.com/in/gabriel-nobrega-371691191/" target="linkedin"><i class="fab fa-linkedin aside centerv"></i></a>
+            <a href="https://mail.google.com/mail/?view=cm&fs=1&to=gabriel.nobrega@ccc.ufcg.edu.br" title="gabriel.nobrega@ccc.ufcg.edu.br" target="email"><i class="fas fa-envelope aside centerv"></i></a>
     </aside>
     <footer></footer>
 </body>
