--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
                             <li>u2</li>
                         </ul>
                         <div class="projectlinks">
-                            <a href="#"><img src="./assets/back.svg"></a>
-                            <a href="#"><img src="./assets/site.svg"></a>
+                            <a href="#"><img class="sourcebutton" src="./assets/site.svg"></a>
                         </div>
                     </div>
                     <div class="item project">
@@ -45,8 +44,8 @@
                             <li>mongodb</li>
                         </ul>
                         <div class="projectlinks">
-                            <a href="#"><img src="./assets/site.svg"></a>
-                            <a href="#"><img src="./assets/front.svg"></a>
+                            <a href="#"><img class="sourcebutton" src="./assets/site.svg"></a>
+                            <a href="#"><img class="sourcebutton" src="./assets/front.svg"></a>
                         </div>
                     </div>
                     <div class="item project">
@@ -57,9 +56,9 @@
                             <li>u2</li>
                         </ul>
                         <div class="projectlinks">
-                            <a href="#"><img src="./assets/back.svg"></a>
-                            <a href="#"><img src="./assets/site.svg"></a>
-                            <a href="#"><img src="./assets/front.svg"></a>
+                            <a href="#"><img class="sourcebutton"  src="./assets/site.svg"></a>
+                            <a href="#"><img class="sourcebutton"  src="./assets/front.svg"></a>
+                            <a href="#"><img class="sourcebutton"  src="./assets/back.svg"></a>
                         </div>
                     </div>
                 </section>
