--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat+Alternates&display=swap" rel="stylesheet"> 
+    <script type="module" src="./script.js"></script>
     <title>Gabriel Nóbrega</title>
 </head>
 <body class ="container">
@@ -24,43 +25,7 @@
         <div>
                 <h2 class="item">My Work</h2>
                 <section class="box">
-                    <div class="item project">
-                        <h3 class="projecttitle">lorem</h3>
-                        <p class="projectdesc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis quisquam sapiente reprehenderit aut magnam ipsam perferendis, molestiae eveniet consequatur, cupiditate esse corporis quae sed, aliquid ad? Dolorem hic error at?</p>
-                        <ul class="projecttech">
-                            <li>u1</li>
-                            <li>u2</li>
-                        </ul>
-                        <div class="projectlinks">
-                            <a href="#"><img class="sourcebutton" src="./assets/site.svg"></a>
-                        </div>
-                    </div>
-                    <div class="item project">
-                        <h3 class="projecttitle">ipsum</h3>
-                        <p class="projectdesc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis quisquam sapiente reprehenderit aut magnam ipsam perferendis, molestiae eveniet consequatur, cupiditate esse corporis quae sed, aliquid ad? Dolorem hic error at?</p>
-                        <ul class="projecttech">
-                            <h4>Tech</h4>
-                            <li>nodejs</li>
-                            <li>mongodb</li>
-                        </ul>
-                        <div class="projectlinks">
-                            <a href="#"><img class="sourcebutton" src="./assets/site.svg"></a>
-                            <a href="#"><img class="sourcebutton" src="./assets/front.svg"></a>
-                        </div>
-                    </div>
-                    <div class="item project">
-                        <h3 class="projecttitle">dolor</h3>
-                        <p class="projectdesc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis quisquam sapiente reprehenderit aut magnam ipsam perferendis, molestiae eveniet consequatur, cupiditate esse corporis quae sed, aliquid ad? Dolorem hic error at?</p>
-                        <ul class="projecttech">
-                            <li>u1</li>
-                            <li>u2</li>
-                        </ul>
-                        <div class="projectlinks">
-                            <a href="#"><img class="sourcebutton"  src="./assets/site.svg"></a>
-                            <a href="#"><img class="sourcebutton"  src="./assets/front.svg"></a>
-                            <a href="#"><img class="sourcebutton"  src="./assets/back.svg"></a>
-                        </div>
-                    </div>
+   
                 </section>
         </div>
     </main>
