adding curriculo, fixing navbar

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 </head>
 <body class ="container">
     <header class="fixed-top">
-        <i class = "material-icons item centerv" style="font-size:48px; color:#66fcf1; margin-right:auto">menu</i>
-        <i class = "material-icons item centerv" style="font-size:42px; color:#66fcf1" >dashboard</i>
-        <i class="item centerv" style="margin-left:auto; width:42px;"></i>
+        <i class = "material-icons item centerv" style="margin:auto; font-size:42px; color:#66fcf1" >dashboard</i>
+        
     </header>
     <main>
-        <div>
+        <div class="about">
             <h2 class="item">About me</h2>
-            <p class="item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid recusandae eligendi nemo distinctio iure cupiditate iste possimus. Aut, odit adipisci totam repudiandae dolores dolorem maxime fugiat eius unde saepe voluptates.LoremLorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid recusandae eligendi nemo distinctio iure cupiditate iste possimus. Aut, odit adipisci totam repudiandae dolores dolorem maxime fugiat eius unde saepe voluptates.LoremLorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid recusandae eligendi nemo distinctio iure cupiditate iste possimus. Aut, odit adipisci totam repudiandae dolores dolorem maxime fugiat eius unde saepe voluptates.LoremLorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid recusandae eligendi nemo distinctio iure cupiditate iste possimus. Aut, odit adipisci totam repudiandae dolores dolorem maxime fugiat eius unde saepe voluptates.LoremLorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid recusandae eligendi nemo distinctio iure cupiditate iste possimus. Aut, odit adipisci totam repudiandae dolores dolorem maxime fugiat eius unde saepe voluptates.LoremLorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid recusandae eligendi nemo distinctio iure cupiditate iste possimus. Aut, odit adipisci totam repudiandae dolores dolorem maxime fugiat eius unde saepe voluptates.LoremLorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid recusandae eligendi nemo distinctio iure cupiditate iste possimus. Aut, odit adipisci totam repudiandae dolores dolorem maxime fugiat eius unde saepe voluptates.LoremLorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid recusandae eligendi nemo distinctio iure cupiditate iste possimus. Aut, odit adipisci totam repudiandae dolores dolorem maxime fugiat eius unde saepe voluptates.Lorem</p>
+            <p class="item">I'm a undergraduate computer science student at UFCG, you can know more about me by reading my CV or browsing throug my projects.</p>
+            <a href="./assets/Curriculo.pdf" download><i style="font-size: 60px; color: #66fcf1;" class="material-icons">assignment</i></a>
         </div>
         <div>
                 <h2 class="item">My Work</h2>
